# beignet-haricot

./: CHANGELOG.md  README.md  RELEASING.md  app.config.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: release-info.mjs  sync-app-config.mjs
src/: app.tsx  config.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: openmind.toml
src-tauri/permissions/autogenerated/: openmind_request.toml  stream_openmind_ask.toml
src-tauri/src/: lib.rs  main.rs  openmind.rs
src/components/: common.tsx  markdown.tsx  sidebar.tsx
src/lib/: api.ts  format.ts  types.ts
src/views/: activity.tsx  ask.tsx  search.tsx  settings.tsx  sources.tsx
