[package]
name = "beignet-haricot"
version = "0.0.2"
description = "A lightweight desktop client for OpenMind."
authors = ["OpenMind contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "openmind_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6"
eventsource-stream = "0.2"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["fs", "rt"] }
url = "2"
